--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "How much money man?",
   "main": "main.js",
+  "private": true,
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,9 +13,5 @@
   "devDependencies": {
     "electron": "^8.2.5"
   },
-  "dependencies": {
-    "@popperjs/core": "^2.4.0",
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.5.1"
-  }
+  "dependencies": {}
 }
