--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Liam Palmer",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^8.2.5"
+    "electron": "^8.2.5",
+    "electron-packager": "^14.2.1"
   },
   "dependencies": {
     "fs-jetpack": "^2.4.0",
