--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "electron-packager": "^14.2.1"
   },
   "dependencies": {
+    "d3-shape": "^2.0.0",
     "fs-jetpack": "^2.4.0",
     "jquery": "^3.5.1"
   }
