--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Liam Palmer",
   "license": "ISC",
   "private": true,
-  "main": "public/main.js",
+  "main": "main.js",
   "scripts": {
     "start": "react-scripts start",
     "electron-start": "electron .",
