--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "fs-jetpack": "^2.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4",
-    "fs-jetpack": "^2.4.0",
-    "jquery": "^3.5.1"
+    "web-vitals": "^0.2.4"
   },
   "eslintConfig": {
     "extends": [
