--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "fs-jetpack": "^2.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.3",
     "recharts": "^2.0.9",
     "web-vitals": "^0.2.4"
   },
